streamlined interval logic and adjusted test with well-defined syntax, various fixes for arrays